Update to module system branch